# puyobot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  animate.c  benchmark.c  bitboard.c  bottom.c  bottom_template.c  complex_policy.c  constants.c  deal.c  demo.c  eval.c  harassment.c  info.c  jkiss.c  main.c  merge_clears.c  montecarlo.c  multiplayer.c  multiplayer_demo.c  policy.c  rank_policies.c  rank_templates.c  record_policy.c  scoring.c  state.c  tabulate_clear_chance.c  tabulate_openings.c  template.c  template_gen.c  test.c  todo.c  tournament.c  tree.c  unique_deals.c  util.c
api/: connect.py  main.c
include/puyobot/: animate.h  bitboard.h  bottom.h  constants.h  deal.h  multiplayer.h  record.h  state.h  tablebase.h  util.h
include/puyobot/solver/: eval.h  game_policy.h  policy.h  ranking.h  search.h  simul_tree.h  tree.h
include/puyobot/template/: bottom.h  bottom_match.h  pattern.h
include/puyobot/ui/: init.h  state.h
src/: CMakeLists.txt  animate.c  bitboard.c  bottom.c  deal.c  multiplayer.c  record.c  state.c  tablebase.c  util.c
src/solver/: eval.c  game_policy.c  policy.c  ranking.c  search.c  simul_tree.c  tree.c
src/template/: bottom.c  bottom_match.c  pattern.c
src/ui/: init.c  state.c
test/: CMakeLists.txt  test_bitboard.c  test_bottom.c  test_bottom_match.c  test_bottom_template.c  test_deal.c  test_multiplayer.c  test_simul_tree.c  test_solver.c  test_state.c  test_tablebase.c  test_util.c
ui/: endless.c  main.c  playback.c  state.c  versus_bot.c
