INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}../include)

FILE(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
FOREACH(TEST_FILENAME ${TEST_SOURCES})
  GET_FILENAME_COMPONENT(TEST_NAME ${TEST_FILENAME} NAME_WE)
  ADD_EXECUTABLE(${TEST_NAME} ${TEST_FILENAME})
  TARGET_LINK_LIBRARIES(${TEST_NAME} puyobot fulldict jkiss)
  ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
ENDFOREACH()
